src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.LibraryImport.cs

#if NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_create")]
        internal static partial int QRCodeDetectorCreate(out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_release_handle")]
        internal static partial void QRCodeDetectorReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_set_eps_x")]
        internal static partial int QRCodeDetectorSetEpsX(IntPtr detector, double epsX);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_set_eps_y")]
        internal static partial int QRCodeDetectorSetEpsY(IntPtr detector, double epsY);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_set_use_alignment_markers")]
        internal static partial int QRCodeDetectorSetUseAlignmentMarkers(IntPtr detector, int useAlignmentMarkers);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect")]
        internal static partial int QRCodeDetectorDetect(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_length")]
        internal static partial int QRCodeDetectorDecodeLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_fill")]
        internal static partial int QRCodeDetectorDecodeFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_length")]
        internal static partial int QRCodeDetectorDetectAndDecodeLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_fill")]
        internal static partial int QRCodeDetectorDetectAndDecodeFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_curved_length")]
        internal static partial int QRCodeDetectorDecodeCurvedLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_curved_fill")]
        internal static partial int QRCodeDetectorDecodeCurvedFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_curved_length")]
        internal static partial int QRCodeDetectorDetectAndDecodeCurvedLength(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_curved_fill")]
        internal static partial int QRCodeDetectorDetectAndDecodeCurvedFill(IntPtr detector, IntPtr image, IntPtr points, IntPtr straightQRCode, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_multi")]
        internal static partial int QRCodeDetectorDetectMulti(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_multi_count")]
        internal static partial int QRCodeDetectorDecodeMultiCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_decode_multi_fill")]
        internal static partial int QRCodeDetectorDecodeMultiFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_multi_count")]
        internal static partial int QRCodeDetectorDetectAndDecodeMultiCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_detect_and_decode_multi_fill")]
        internal static partial int QRCodeDetectorDetectAndDecodeMultiFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_qrcode_detector_get_encoding")]
        internal static partial int QRCodeDetectorGetEncoding(IntPtr detector, int codeIndex, out int encoding);

        [StructLayout(LayoutKind.Sequential)]
        internal struct QRCodeDetectorArucoParamsNative
        {
            internal float MinModuleSizeInPyramid;
            internal float MaxRotation;
            internal float MaxModuleSizeMismatch;
            internal float MaxTimingPatternMismatch;
            internal float MaxPenalties;
            internal float MaxColorsMismatch;
            internal float ScaleTimingPatternScore;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct QRCodeEncoderParamsNative
        {
            internal int Version;
            internal int CorrectionLevel;
            internal int Mode;
            internal int StructureNumber;
        }

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_create")]
        internal static partial int BarcodeDetectorCreate(out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_create_with_super_resolution")]
        internal static partial int BarcodeDetectorCreateWithSuperResolution(byte[] superResolutionModelPath, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_release_handle")]
        internal static partial void BarcodeDetectorReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect")]
        internal static partial int BarcodeDetectorDetect(IntPtr detector, IntPtr image, IntPtr points, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_count")]
        internal static partial int BarcodeDetectorDecodeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_fill")]
        internal static unsafe partial int BarcodeDetectorDecodeFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_with_type_count")]
        internal static partial int BarcodeDetectorDecodeWithTypeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_decode_with_type_fill")]
        internal static unsafe partial int BarcodeDetectorDecodeWithTypeFill(IntPtr detector, IntPtr image, IntPtr points, int* infoOffsets, int infoOffsetCapacity, byte* infoBuffer, int infoBufferCapacity, int* typeOffsets, int typeOffsetCapacity, byte* typeBuffer, int typeBufferCapacity, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_count")]
        internal static partial int BarcodeDetectorDetectAndDecodeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_fill")]
        internal static unsafe partial int BarcodeDetectorDetectAndDecodeFill(IntPtr detector, IntPtr image, IntPtr points, int* offsets, int offsetCapacity, byte* buffer, int bufferCapacity, out int decoded, out int stringCount, out int byteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_with_type_count")]
        internal static partial int BarcodeDetectorDetectAndDecodeWithTypeCount(IntPtr detector, IntPtr image, IntPtr points, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_detect_and_decode_with_type_fill")]
        internal static unsafe partial int BarcodeDetectorDetectAndDecodeWithTypeFill(IntPtr detector, IntPtr image, IntPtr points, int* infoOffsets, int infoOffsetCapacity, byte* infoBuffer, int infoBufferCapacity, int* typeOffsets, int typeOffsetCapacity, byte* typeBuffer, int typeBufferCapacity, out int decoded, out int infoCount, out int infoByteCount, out int typeCount, out int typeByteCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_downsampling_threshold")]
        internal static partial int BarcodeDetectorGetDownsamplingThreshold(IntPtr detector, out double threshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_set_downsampling_threshold")]
        internal static partial int BarcodeDetectorSetDownsamplingThreshold(IntPtr detector, double threshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_gradient_threshold")]
        internal static partial int BarcodeDetectorGetGradientThreshold(IntPtr detector, out double threshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_set_gradient_threshold")]
        internal static partial int BarcodeDetectorSetGradientThreshold(IntPtr detector, double threshold);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_barcode_detector_get_detector_scales_count")]
        internal static partial int BarcodeDetectorGetDetectorScalesCount(IntPtr detector, out int count);
